--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -953,6 +953,7 @@ jobs:
       if: ${{ runner.os != 'windows' }}
       shell: bash -l {0}
       run: |
+        set -e
         ./emsdk/emsdk activate ${{matrix.emsdk_ver}}
         source ./emsdk/emsdk_env.sh
         micromamba activate CppInterOp-wasm
@@ -971,6 +972,7 @@ jobs:
           -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}/lib/clang/${{ matrix.clang-runtime }} \
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                     \
           ..
+        emmake make -j ${{ env.ncpus }} check-xeus-cpp
         emmake make -j ${{ env.ncpus }} install
 
     - name: Build xeus-cpp on Windows systems
@@ -980,6 +982,18 @@ jobs:
         .\emsdk\emsdk activate ${{matrix.emsdk_ver}}
         .\emsdk\emsdk_env.ps1
         micromamba activate CppInterOp-wasm
+        function Error-OnFailure {
+          param (
+              [Parameter(Mandatory)]
+              [ScriptBlock]$Command
+          )
+
+         & $Command
+
+         if ($LASTEXITCODE -ne 0) {
+            exit $LASTEXITCODE
+         }
+        }
         git clone --depth=1 https://github.com/compiler-research/xeus-cpp.git
         cd .\xeus-cpp
         mkdir build
@@ -995,18 +1009,10 @@ jobs:
           -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}\lib\clang\${{ matrix.clang-runtime }} `
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                `
           ..
-        emmake make -j ${{ env.ncpus }} install
+        Error-OnFailure { emmake make -j ${{ env.ncpus }} check-xeus-cpp }
+        Error-OnFailure { emmake make -j ${{ env.ncpus }} install }
 
-    - name: Test xeus-cpp C++ Emscripten on Unix Systems
-      if: ${{ runner.os != 'windows' }}
-      shell: bash -l {0}
-      run: |
-        set -e
-        micromamba activate CppInterOp-wasm
-        cd ./xeus-cpp/build/test
-        node test_xeus_cpp.js
-
-    - name: Test xeus-cpp C++ Emscripten on Windows Systems
+    - name: Test xeus-cpp Emscripten C++ tests in browsers on Windows Systems
       if: ${{ runner.os == 'windows' }}
       shell: powershell
       run: |
@@ -1024,7 +1030,6 @@ jobs:
         }
         micromamba activate CppInterOp-wasm
         cd .\xeus-cpp\build\test
-        node test_xeus_cpp.js
         echo "Running test_xeus_cpp in Firefox"
         Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  test_xeus_cpp.html }
         echo "Running test_xeus_cpp in Chromium"
