--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -963,6 +963,8 @@ jobs:
         pushd build
         export CMAKE_PREFIX_PATH=${{ env.PREFIX }}
         export CMAKE_SYSTEM_PREFIX_PATH=${{ env.PREFIX }}
+        micromamba create -n node-env -c conda-forge nodejs=22
+        export PATH="$MAMBA_ROOT_PREFIX/envs/node-env/bin:$PATH"
         emcmake cmake \
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          \
           -DCMAKE_PREFIX_PATH=${{ env.PREFIX }}             \
@@ -1000,6 +1002,10 @@ jobs:
         pushd build
         $env:CMAKE_PREFIX_PATH="${{ env.PREFIX }}"
         $env:CMAKE_SYSTEM_PREFIX_PATH="${{ env.PREFIX }}"
+        micromamba create -n node-env -c conda-forge nodejs=22
+        $env:PATH="$env:MAMBA_ROOT_PREFIX/envs/node-env/bin;$env:PATH""
+        echo "PATH=$env:PATH"
+        echo "PATH=$env:PATH" >> $env:GITHUB_ENV
         emcmake cmake `
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          `
           -DCMAKE_PREFIX_PATH=${{ env.PREFIX }}             `
