--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -956,13 +956,16 @@ jobs:
         ./emsdk/emsdk activate ${{matrix.emsdk_ver}}
         source ./emsdk/emsdk_env.sh
         micromamba activate CppInterOp-wasm
-        git clone https://github.com/compiler-research/xeus-cpp.git
+        git clone --branch test --single-branch https://github.com/anutosh491/xeus-cpp.git
         cd ./xeus-cpp
-        git reset --hard HEAD~
         mkdir build
         pushd build
         export CMAKE_PREFIX_PATH=${{ env.PREFIX }}
         export CMAKE_SYSTEM_PREFIX_PATH=${{ env.PREFIX }}
+
+        micromamba create -n node-env -c conda-forge nodejs=22
+        export PATH="$MAMBA_ROOT_PREFIX/envs/node-env/bin:$PATH"
+
         emcmake cmake \
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          \
           -DCMAKE_PREFIX_PATH=${{ env.PREFIX }}             \
@@ -972,6 +975,7 @@ jobs:
           -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}/lib/clang/${{ matrix.clang-runtime }} \
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                     \
           ..
+        emmake make check-xeus-cpp -j ${{ env.ncpus }}
         emmake make -j ${{ env.ncpus }} install
 
     - name: Build xeus-cpp on Windows systems
@@ -981,9 +985,8 @@ jobs:
         .\emsdk\emsdk activate ${{matrix.emsdk_ver}}
         .\emsdk\emsdk_env.ps1
         micromamba activate CppInterOp-wasm
-        git clone https://github.com/compiler-research/xeus-cpp.git
+        git clone --branch test --single-branch https://github.com/anutosh491/xeus-cpp.git
         cd .\xeus-cpp
-        git reset --hard HEAD~
         mkdir build
         pushd build
         $env:CMAKE_PREFIX_PATH="${{ env.PREFIX }}"
@@ -1006,6 +1009,7 @@ jobs:
         set -e
         micromamba activate CppInterOp-wasm
         cd ./xeus-cpp/build/test
+        node --version
         node test_xeus_cpp.js
 
     - name: Test xeus-cpp C++ Emscripten on Windows Systems
@@ -1026,6 +1030,7 @@ jobs:
         }
         micromamba activate CppInterOp-wasm
         cd .\xeus-cpp\build\test
+        node --version
         node test_xeus_cpp.js
         echo "Running test_xeus_cpp in Firefox"
         Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  test_xeus_cpp.html }
