--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -963,8 +963,9 @@ jobs:
         export CMAKE_PREFIX_PATH=${{ env.PREFIX }}
         export CMAKE_SYSTEM_PREFIX_PATH=${{ env.PREFIX }}
 
-        micromamba create -n node-env -c conda-forge nodejs=22
+        micromamba create -n node-env -c conda-forge nodejs=24
         export PATH="$MAMBA_ROOT_PREFIX/envs/node-env/bin:$PATH"
+        node --version
 
         emcmake cmake \
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          \
@@ -1007,7 +1008,7 @@ jobs:
       shell: bash -l {0}
       run: |
         set -e
-        micromamba activate CppInterOp-wasm
+        micromamba activate node-env
         cd ./xeus-cpp/build/test
         node --version
         node test_xeus_cpp.js
