Use X macros to generate funcptrs and symbol-address dispatch table
Rename CppInterOpDispatch -> CppDispatch, Address more review comments and drop `DECLARE_CPP` style macros

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -27,6 +27,7 @@ add_cppinterop_unittest(CppInterOpTests
   TypeReflectionTest.cpp
   Utils.cpp
   VariableReflectionTest.cpp
+  DispatchAPITest.cpp
   ${EXTRA_TEST_SOURCE_FILES}
 )
 
