--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -1027,7 +1027,7 @@ jobs:
           -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}/lib/clang/${{ matrix.clang-runtime }} \
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                     \
           ..
-        emmake make -j ${{ env.ncpus }} install
+        EMCC_CFLAGS="-sSUPPORT_LONGJMP=wasm" emmake make -j ${{ env.ncpus }} install
 
     - name: Build xeus-cpp on Windows systems
       if: ${{ runner.os == 'windows' }}
@@ -1051,7 +1051,9 @@ jobs:
           -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}\lib\clang\${{ matrix.clang-runtime }} `
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                `
           ..
+	$env:EMCC_CFLAGS="-sSUPPORT_LONGJMP=wasm"
         emmake make -j ${{ env.ncpus }} install
+        $env:EMCC_CFLAGS=""
 
     - name: Test xeus-cpp C++ Emscripten on Unix Systems
       if: ${{ runner.os != 'windows' }}
