--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -49,8 +49,13 @@ if(EMSCRIPTEN)
   # --emrun
   # Makes it so that we run the html file created by this target, that we can capture the standard output
   # and output to the terminal
+  target_compile_options(CppInterOpTests
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+  )
   target_link_options(CppInterOpTests
-    PUBLIC "SHELL: -fexceptions"
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
+    PUBLIC $<$<NOT:$<BOOL:CPPINTEROP_ENABLE_WASM_EXCEPTIONS>>:SHELL:-fexceptions>
     PUBLIC "SHELL: -s MAIN_MODULE=1"
     PUBLIC "SHELL: -s WASM_BIGINT"
     PUBLIC "SHELL: -s ALLOW_MEMORY_GROWTH=1"
@@ -58,6 +63,7 @@ if(EMSCRIPTEN)
     PUBLIC "SHELL: -s INITIAL_MEMORY=128mb"
     PUBLIC "SHELL: --preload-file ${ESCAPED_SYSROOT_PATH}/include@/include"
     PUBLIC "SHELL: --emrun"
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
   )
 endif()
 
@@ -77,9 +83,16 @@ if(NOT WIN32)
 )
 endif()
 
-set_source_files_properties(InterpreterTest.cpp PROPERTIES COMPILE_DEFINITIONS
-  "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
-)
+if (CPPINTEROP_ENABLE_WASM_EXCEPTIONS)
+  set_source_files_properties(InterpreterTest.cpp PROPERTIES
+    COMPILE_DEFINITIONS
+      "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\";CPPINTEROP_ENABLE_WASM_EXCEPTIONS=$<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:1>"
+  )
+else ()
+  set_source_files_properties(InterpreterTest.cpp PROPERTIES COMPILE_DEFINITIONS
+    "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
+  )
+endif ()
 export_executable_symbols(CppInterOpTests)
 
 unset(LLVM_LINK_COMPONENTS)
@@ -104,7 +117,12 @@ if(EMSCRIPTEN)
   set(TEST_SHARED_LIBRARY_PATH "${CMAKE_CURRENT_BINARY_DIR}/TestSharedLib/unittests/bin/$<CONFIG>/")
   string(REPLACE "@" "@@" ESCAPED_TEST_SHARED_LIBRARY_PATH "${TEST_SHARED_LIBRARY_PATH}")
   # Check explanation of Emscripten-specific link flags for CppInterOpTests above for DynamicLibraryManagerTests as well.
+  target_compile_options(DynamicLibraryManagerTests
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+  )
   target_link_options(DynamicLibraryManagerTests
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
     PUBLIC "SHELL: -s MAIN_MODULE=1"
     PUBLIC "SHELL: -s WASM_BIGINT"
     PUBLIC "SHELL: -s ALLOW_MEMORY_GROWTH=1"
@@ -113,6 +131,7 @@ if(EMSCRIPTEN)
     PUBLIC "SHELL: --preload-file ${ESCAPED_SYSROOT_PATH}/include@/include"
     PUBLIC "SHELL: --emrun"
     PUBLIC "SHELL: --preload-file ${ESCAPED_TEST_SHARED_LIBRARY_PATH}/libTestSharedLib.so@/libTestSharedLib.so"
+    PUBLIC $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
   )
 endif()
 
