Adds Cpp::GetDoxygenComment() to extract documentation comments from C++ declarations. Supports both block-style (/** */) and line-style (///) Doxygen comments
Signed-off-by: AdityaPandeyCN <adityapand3y666@gmail.com>

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -12,6 +12,7 @@ else()
 endif()
 
 add_cppinterop_unittest(CppInterOpTests
+  CommentReflectionTest.cpp
   EnumReflectionTest.cpp
   FunctionReflectionTest.cpp
   InterpreterTest.cpp
@@ -135,3 +136,4 @@ add_dependencies(DynamicLibraryManagerTests TestSharedLib)
 
 #export_executable_symbols_for_plugins(TestSharedLib)
 add_subdirectory(TestSharedLib)
+
