Add temporary patch for Emscripten llvm 21 builds so that it can handle wasm exceptions

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -88,6 +88,10 @@ if (CPPINTEROP_ENABLE_WASM_EXCEPTIONS)
     COMPILE_DEFINITIONS
       "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\";CPPINTEROP_ENABLE_WASM_EXCEPTIONS=$<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:1>"
   )
+  set_source_files_properties(VariableReflectionTest.cpp PROPERTIES
+    COMPILE_DEFINITIONS
+      "CPPINTEROP_ENABLE_WASM_EXCEPTIONS=$<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:1>"
+  )
 else ()
   set_source_files_properties(InterpreterTest.cpp PROPERTIES COMPILE_DEFINITIONS
     "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
