Add unittest executable that runs entirely in Dispatch mode
Gives the mechanism complete coverage. Now runs CppInterOpTests and CppInterOpDispatchTests

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -30,7 +30,9 @@ add_dependencies(CppInterOpUnitTests clangCppInterOp)
 
 set (TIMEOUT_VALUE 2400)
 function(add_cppinterop_unittest name)
-  add_executable(${name} EXCLUDE_FROM_ALL ${ARGN})
+  list(REMOVE_ITEM ARGN "TEST_DISPATCH")
+  set(SOURCE_FILES ${ARGN})
+  add_executable(${name} EXCLUDE_FROM_ALL ${SOURCE_FILES})
   add_dependencies(CppInterOpUnitTests ${name})
   target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${GTEST_INCLUDE_DIR})
   set_property(TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
