--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -49,34 +49,6 @@ jobs:
             llvm_enable_projects: "clang;lld"
             llvm_targets_to_build: "WebAssembly"
             emsdk_ver: "4.0.9"
-          - name: ubu24-arm-clang-repl-21-emscripten
-            os: ubuntu-24.04-arm
-            clang-runtime: '21'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "4.0.9"
-          - name: osx26-arm-clang-repl-21-emscripten
-            os: macos-26
-            clang-runtime: '21'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "4.0.9"
-          - name: ubu24-x86-clang-repl-21-emscripten
-            os: ubuntu-24.04
-            clang-runtime: '21'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "4.0.9"
-          - name: win2025-x86-clang-repl-21-emscripten
-            os: windows-2025
-            clang-runtime: '21'
-            cling: Off
-            llvm_enable_projects: "clang;lld"
-            llvm_targets_to_build: "WebAssembly"
-            emsdk_ver: "4.0.9"
 
     steps:
     - uses: actions/checkout@v6
@@ -199,7 +171,7 @@ jobs:
         else
           # Apply patches
           llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
-          if [[ "${llvm_vers}" == "19" || "${llvm_vers}" == "20" || "${llvm_vers}" == "21"  ]]; then
+          if [[ "${llvm_vers}" == "19" || "${llvm_vers}" == "20" ]]; then
             git apply -v ../patches/llvm/emscripten-clang${{ matrix.clang-runtime }}-*.patch
             echo "Apply emscripten-clang${{ matrix.clang-runtime }}-*.patch patches:"
           fi
@@ -325,11 +297,6 @@ jobs:
             git apply -v emscripten-clang20-2-shift-temporary-files-to-tmp-dir.patch
             git apply -v emscripten-clang20-3-enable_exception_handling.patch
           }
-          elseif ( "${{ matrix.clang-runtime }}" -imatch "21" )
-          {
-            git apply -v emscripten-clang21-1-shift-temporary-files-to-tmp-dir.patch
-            git apply -v emscripten-clang21-2-enable_exception_handling.patch
-          }
           cd build
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           emcmake cmake -DCMAKE_BUILD_TYPE=Release `
@@ -415,30 +382,6 @@ jobs:
           - name: win2025-x86-clang-repl-20-emscripten
             os: windows-2025
             clang-runtime: '20'
-            cling: Off
-            micromamba_shell_init: powershell
-            emsdk_ver: "4.0.9"
-          - name: ubu24-x86-clang-repl-21-emscripten_wasm
-            os: ubuntu-24.04
-            clang-runtime: '21'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "4.0.9"
-          - name: osx26-arm-clang-repl-21-emscripten_wasm
-            os: macos-26
-            clang-runtime: '21'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "4.0.9"
-          - name: ubu24-arm-clang-repl-21-emscripten_wasm
-            os: ubuntu-24.04-arm
-            clang-runtime: '21'
-            cling: Off
-            micromamba_shell_init: bash
-            emsdk_ver: "4.0.9"
-          - name: win2025-x86-clang-repl-21-emscripten
-            os: windows-2025
-            clang-runtime: '21'
             cling: Off
             micromamba_shell_init: powershell
             emsdk_ver: "4.0.9"
@@ -538,14 +481,14 @@ jobs:
         fi
         emmake make -j ${{ env.ncpus }} check-cppinterop
         os="${{ matrix.os }}"
-        #if [[ "${os}" != macos* ]] ; then
-        #  actual_size=$(stat -c%s "./lib/libclangCppInterOp.so")
-        #  max_size=$((40 * 1024 * 1024))
-        #  if [[ "$actual_size" -gt "$max_size" ]]; then
-        #    echo "Error: libclangCppInterOp.so is larger than 40 MB."
-        #    exit 1
-        #  fi
-        #fi
+        if [[ "${os}" != macos* ]] ; then
+          actual_size=$(stat -c%s "./lib/libclangCppInterOp.so")
+          max_size=$((40 * 1024 * 1024))
+          if [[ "$actual_size" -gt "$max_size" ]]; then
+            echo "Error: libclangCppInterOp.so is larger than 40 MB."
+            exit 1
+          fi
+        fi
         cd ./unittests/CppInterOp/
         # Fresh install browsers, and run Emscripten tests in them
         # This is to match the Emscripten build instructions, where
