Add llvm 21 support (#672)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,15 @@ jobs:
       matrix:
         include:
           # Ubuntu Arm Jobs
+          - name: ubu24-arm-gcc12-clang-repl-21
+            os: ubuntu-24.04-arm
+            compiler: gcc-12
+            clang-runtime: '21'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+            Valgrind: On
           - name: ubu24-arm-gcc12-clang-repl-20
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -31,7 +40,6 @@ jobs:
             cppyy: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
-            Valgrind: On
           - name: ubu24-arm-gcc12-clang-repl-19-cppyy
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -58,16 +66,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Ubuntu X86 Jobs
-          - name: ubu24-x86-gcc12-clang-repl-20-coverage
+          - name: ubu24-x86-gcc12-clang-repl-21
             os: ubuntu-24.04
             compiler: gcc-12
-            clang-runtime: '20'
+            clang-runtime: '21'
             cling: Off
             cppyy: Off
-            llvm_enable_projects: "clang;compiler-rt"
+            llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
-            coverage: true
-            oop-jit: On
             Valgrind: On
           - name: ubu24-x86-gcc12-clang-repl-20
             os: ubuntu-24.04
@@ -86,6 +92,18 @@ jobs:
             llvm_enable_projects: "clang;compiler-rt"
             llvm_targets_to_build: "host;NVPTX"
             oop-jit: On
+            coverage: true
+            Valgrind: On
+          - name: ubu24-x86-gcc12-clang-repl-20-out-of-process-coverage
+            os: ubuntu-24.04
+            compiler: gcc-12
+            clang-runtime: '20'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang;compiler-rt"
+            llvm_targets_to_build: "host;NVPTX"
+            oop-jit: On
+            coverage: true
           - name: ubu24-x86-gcc12-clang-repl-19-cppyy
             os: ubuntu-24.04
             compiler: gcc-12
@@ -112,6 +130,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # MacOS Arm Jobs
+          - name: osx26-arm-clang-clang-repl-21
+            os: macos-26
+            compiler: clang
+            clang-runtime: '21'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx26-arm-clang-clang-repl-20-out-of-process
             os: macos-26
             compiler: clang
@@ -155,6 +181,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # MacOS X86 Jobs
+          - name: osx15-x86-clang-clang-repl-21
+            os: macos-15-intel
+            compiler: clang
+            clang-runtime: '21'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx15-x86-clang-clang-repl-20
             os: macos-15-intel
             compiler: clang
@@ -189,10 +223,10 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Windows Arm Jobs
-          - name: win11-msvc-clang-repl-20
+          - name: win11-msvc-clang-repl-21
             os: windows-11-arm
             compiler: msvc
-            clang-runtime: '20'
+            clang-runtime: '21'
             cling: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
@@ -205,10 +239,10 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Windows X86 Jobs
-          - name: win2025-msvc-clang-repl-20
+          - name: win2025-msvc-clang-repl-21
             os: windows-2025
             compiler: msvc
-            clang-runtime: '20'
+            clang-runtime: '21'
             cling: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
