--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -71,7 +71,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -347,4 +347,5 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       # When debugging increase to a suitable value!
       timeout-minutes: 30
+
 
