--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -651,7 +651,12 @@ jobs:
                 -DSYSROOT_PATH=$SYSROOT_PATH                     \
                 ../
         fi
-        emmake make -j ${{ env.ncpus }} check-cppinterop
+        os="${{ matrix.os }}"
+        if [[ "${os}" != macos* ]] ; then
+          EMCC_CORES=2 emmake make -j 2 check-cppinterop
+        else
+          emmake make -j ${{ env.ncpus }} check-cppinterop
+        fi
         cd ./unittests/CppInterOp/
         # Explaination of options for emrun
         # --browser (name of browser on path)
