[ci] Turn cppy to on for llvm 21

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -71,7 +71,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -135,7 +135,7 @@ jobs:
             compiler: clang
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx26-arm-clang-clang-repl-20-out-of-process
@@ -186,7 +186,7 @@ jobs:
             compiler: clang
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx15-x86-clang-clang-repl-20
@@ -347,5 +347,6 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       # When debugging increase to a suitable value!
       timeout-minutes: 30
+
 
 
