Change git checkout branch for cppyy installation

--- a/.github/actions/Build_and_Test_cppyy/action.yml
+++ b/.github/actions/Build_and_Test_cppyy/action.yml
@@ -52,7 +52,7 @@ runs:
         # Install cppyy
         git clone https://github.com/compiler-research/cppyy.git
         cd cppyy
-        git checkout Update-clang-cling-supp-file
+        git checkout Add-llvm-20-cppyy-jobs
         python -m pip install --upgrade . --no-deps
         cd ..
 
