[ci] Turn Cppyy on for llvm 20 and llvm 21 (#779)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -37,7 +37,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '20'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           - name: ubu24-arm-gcc12-clang-repl-19-cppyy
@@ -71,7 +71,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
@@ -80,7 +80,7 @@ jobs:
             compiler: gcc-12
             clang-runtime: '20'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           - name: ubu24-x86-gcc12-clang-repl-20-out-of-process
@@ -135,7 +135,7 @@ jobs:
             compiler: clang
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx26-arm-clang-clang-repl-20-out-of-process
@@ -152,7 +152,7 @@ jobs:
             compiler: clang
             clang-runtime: '20'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx26-arm-clang-clang-repl-19-cppyy
@@ -186,7 +186,7 @@ jobs:
             compiler: clang
             clang-runtime: '21'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx15-x86-clang-clang-repl-20
@@ -194,7 +194,7 @@ jobs:
             compiler: clang
             clang-runtime: '20'
             cling: Off
-            cppyy: Off
+            cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host"
           - name: osx15-x86-clang-clang-repl-19-cppyy
@@ -347,4 +347,6 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       # When debugging increase to a suitable value!
       timeout-minutes: 30
+
+
 
