Add GetDoxygenComment API for extracting documentation comments (#768)
Adds Cpp::GetDoxygenComment() to extract documentation comments from
C++ declarations. Supports both block-style (/** */) and line-style
(///) Doxygen comments

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -11,6 +11,7 @@ else()
 endif()
 
 add_cppinterop_unittest(CppInterOpTests
+  CommentReflectionTest.cpp
   EnumReflectionTest.cpp
   FunctionReflectionTest.cpp
   InterpreterTest.cpp
@@ -102,3 +103,4 @@ add_dependencies(DynamicLibraryManagerTests TestSharedLib)
 
 #export_executable_symbols_for_plugins(TestSharedLib)
 add_subdirectory(TestSharedLib)
+
