--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -131,8 +131,7 @@ if(EMSCRIPTEN)
   target_compile_options(clangCppInterOp
     PRIVATE "SHELL: -Oz"
     PRIVATE "SHELL: -flto"
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+    PRIVATE "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
   target_link_options(clangCppInterOp
     PRIVATE "SHELL: -s WASM_BIGINT"
@@ -140,18 +139,15 @@ if(EMSCRIPTEN)
     PRIVATE "SHELL: ${SYMBOLS_LIST}"
     PRIVATE "SHELL: -Oz"
     PRIVATE "SHELL: -flto"
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+    PRIVATE "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
   else()
   target_compile_options(clangCppInterOp
-      PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
-      PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+    PRIVATE "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
   target_link_options(clangCppInterOp
       PRIVATE "SHELL: -s WASM_BIGINT"
-      PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
-      PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-sSUPPORT_LONGJMP=wasm>
+      PRIVATE "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
   endif(BUILD_SHARED_LIBS)
   if (CPPINTEROP_ENABLE_TESTING)
