--- a/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
+++ b/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
@@ -15,13 +15,13 @@ if (EMSCRIPTEN)
     PROPERTIES NO_SONAME 1
   )
   target_compile_options(TestSharedLib
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
+    PUBLIC "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
 
   target_link_options(TestSharedLib
     PRIVATE "SHELL: -s WASM_BIGINT"
     PRIVATE "SHELL: -s SIDE_MODULE=1"
-    PRIVATE $<$<BOOL:${CPPINTEROP_ENABLE_WASM_EXCEPTIONS}>:SHELL:-fwasm-exceptions>
+    PUBLIC "SHELL: ${CPPINTEROP_EXCEPTION_HANDLING_FLAGS}"
   )
 endif()
 
